Ensure body font size changes on mobile

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -11,8 +11,8 @@ p.body {
   color: $color-gray;
 
   @include on-mobile {
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 14px !important;
+    line-height: 21px !important;
   }
 }
 
